--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.0",
-    "mongoose": "^5.5.11"
+    "mongoose": "^5.5.11",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
