--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Abdul Haqani",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.0",
     "express-handlebars": "^3.1.0",
