--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.0",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.17.0",
+    "method-override": "^3.0.0",
     "moment": "^2.24.0",
     "mongoose": "^5.7.7",
     "passport": "^0.4.0",
